[gd_scene load_steps=3 format=3 uid="uid://clnt5qks3e1ju"]

[ext_resource type="Script" uid="uid://pwqcpq2k5bvj" path="res://scenes/end_game/final_scores.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://7xk0ctfo0he4" path="res://autoload/background.tscn" id="2_be16e"]

[node name="FinalScores" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" parent="." instance=ExtResource("2_be16e")]

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 0
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "PLAYER WINS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoresContainer" type="VBoxContainer" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="MenuButton" type="Button" parent="Panel/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = "BACK TO MAIN MENU"
